파일전송까지 완료 다른경로 파일 찾지못함

--- a/final_example/ex/ex.csproj
+++ b/final_example/ex/ex.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FUP">
+      <HintPath>..\..\ex_network\FUP\bin\Debug\netstandard2.0\FUP.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
